# BlockRooms-Frontend

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
client/: package-lock.json  package.json  tsconfig.app.tsbuildinfo
client/src/: main.tsx
client/src/app/: App.tsx
client/src/components/: index.ts
client/src/components/systems/: AudioManager.tsx  DoorDetector.tsx  FirstPersonControls.tsx
client/src/components/ui/: DarknessMask.tsx  GrainVignetteOverlay.tsx  (+2 more)
client/src/config/: manifest.ts
client/src/hooks/: useCollectShard.tsx  useDoor.tsx  useEndGame.tsx  useInitializePlayer.tsx  useStartGame.tsx
client/src/lib/: solana.ts  txlog.ts
client/src/models/: Bloccc.tsx
client/src/types/: models.ts
contract/: .gitignore  Anchor.toml  ER_STATUS.md  MAGICBLOCK.md  package.json
contract/programs/contract/: Cargo.toml
contract/programs/gameframework/: Cargo.toml
contract/programs/gameframework/src/: lib.rs
contract/tests/: contract.ts  er-test.ts  gameframework.ts
src/: main.tsx
src/components/game/: EntityCube.tsx  Gun.tsx
src/components/systems/: AudioManager.tsx  FirstPersonControls.tsx
src/components/ui/: Flashlight.tsx  HUD.tsx  MainMenu.tsx  NearbyDoorsComponent.tsx  PlayerHUD.tsx
src/hooks/: useAttackEntity.tsx  useDoor.tsx  useGameData.tsx  useInitializePlayer.tsx  usePlayerMovement.tsx  usePrivyAuth.tsx  useSolanaConnect.tsx  useStarknetConnect.tsx
src/lib/: gameframework.json  solana.ts
src/models/: pocFInal7.tsx
src/types/: models.ts
src/zustand/: store.ts
(+2 files in other folders)
